added functions and firebase auth

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,12 @@
-.App {
+Header nav {
+  display: flex;
+  justify-content: flex-end;
+  max-width: 1040px;
+  margin: 0 auto;
+}
+
+Header nav a {
+  color: black;
+  display: block;
+  margin: 10px;
 }
