--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,32 @@
-Header nav {
-  display: flex;
-  justify-content: flex-end;
-  max-width: 1040px;
+.App {
+  max-width: 1080px;
   margin: 0 auto;
+  padding: 10px 20px;
 }
 
-Header nav a {
+.Header nav {
+  display: flex;
+  margin: 0 -8px;
+}
+
+.Header nav a {
   color: black;
-  display: block;
-  margin: 10px;
+  cursor: pointer;
+  margin: 0 10px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.LoginForm {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+}
+
+.LoginForm label {
+  margin-bottom: 5px;
+}
+
+.LoginForm input {
+  margin-bottom: 20px;
 }
